# MashupForge

./: .env.example  .gitignore  .gitleaksignore  .vercelignore  BRAND.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  metadata.json  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.harness/: agent.md
app/: globals.css  layout.tsx  page.tsx
components/: AutoTextarea.tsx  CreditBudgetBanner.tsx  DesktopLoadingScreen.tsx  DesktopSettingsPanel.tsx  FirstRunBanner.tsx  GalleryCard.tsx  GalleryFilterBar.tsx  ImageDetailModal.tsx  KebabMenu.tsx  LazyImg.tsx  MainContent.tsx  MashupContext.tsx  MashupStudio.tsx  ParamSuggestionCard.tsx  PipelinePanel.tsx  PipelineStatusStrip.tsx  PortConflictBanner.tsx  SettingsModal.tsx  Sidebar.tsx  UndoToast.tsx  UpdateChecker.tsx  WebAnalytics.tsx  WeekHeatmap.tsx
docs/: camofox-integration.md  camofox-standalone-install.md  post-lifecycle-migration.md
hooks/: useCollections.ts  useComparison.ts  useDesktopConfig.ts  useIdeaProcessor.ts  useIdeas.ts  useImageGeneration.ts  useImageReconciler.ts  useImageSrc.ts  useImages.ts  useMainContentAutoPoster.ts  useMainContentBatchOps.ts  useSocial.ts  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-stub/: index.html
src-tauri/resources/: README.md
src-tauri/resources/camofox/: README.md
src-tauri/src/: lib.rs
src-tauri/tests/: camofox_lifecycle.rs
(+455 files in other folders)
