[package]
name = "app"
version = "1.1.2"
description = "MashupForge — AI-driven multiverse crossover content studio (Tauri desktop shell)"
authors = ["Maurice (4neverCompany)"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/4neverCompany/MashupForge"
homepage = "https://github.com/4neverCompany/MashupForge"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }


